INCLUDES = -I$(top_srcdir)/include
METASOURCES = AUTO
lib_LIBRARIES = liblina.a





liblina_a_SOURCES = ldatabase.cpp lcalendar.cpp lutility.cpp lmatch.cpp lstadium.cpp lfootballstadium.cpp lconvert.cpp lmetrics.cpp lcompetition.cpp lstats.cpp lserver.cpp lclient.cpp lnetwork.cpp
SUBDIRS =  netxx
liblina_a_LIBADD = $(top_builddir)/lib/netxx/libnetxx.a
