INCLUDES = -I$(top_srcdir)/include
METASOURCES = AUTO
lib_LIBRARIES =  libnetxx.a
libnetxx_a_SOURCES = accept.cxx accept.h address.cxx common.h compat.h config.jam datagram.cxx datagramserver.cxx inet_ntop.cxx inet_ntop.h inet_pton.cxx inet_pton.h Jamfile osutil.cxx osutil.h peer.cxx probe.cxx probe_impl.h probe_select.cxx recvfrom.cxx recvfrom.h resolve_getaddrinfo.cxx resolve_gethostbyname.cxx resolve_getservbyname.cxx resolve.h serverbase.cxx serverbase.h sockaddr.cxx sockaddr.h socket.cxx socket.h sockopt.cxx streambase.cxx stream.cxx streamserver.cxx tls_certificate.cxx tls_cert_pimpl.h tls_context.cxx tls_context_pimpl.h tls_stream.cxx tls_tls_pimpl.cxx tls_tls_pimpl.h
