INCLUDES = -I$(top_srcdir)/include $(all_includes)
METASOURCES = AUTO
bin_PROGRAMS = ldbtest lcalendartest lutilitytest lrangetest

ldbtest_SOURCES =  ldbtest.cpp


ldbtest_LDADD = $(top_builddir)/lib/liblina.a -lz

lcalendartest_SOURCES =  lcalendartest.cpp
lcalendartest_LDADD = $(top_builddir)/lib/liblina.a -lz
lutilitytest_SOURCES =  lutilitytest.cpp
lutilitytest_LDADD = $(top_builddir)/lib/liblina.a -lz
lrangetest_SOURCES =  lrangetest.cpp
